Ensure that repl region gets a scrollbar when repl content overflows

--- a/app/assets/stylesheets/apps/repl.css.scss
+++ b/app/assets/stylesheets/apps/repl.css.scss
@@ -2,6 +2,7 @@
   background: #272822;
   height: 800px;
   list-style-type: none;
+  overflow-y: auto;
   .expression-container {
     width: 100%;
     margin-right: 80px;
